two way binding

--- a/angular/calculator/src/app/foodcourt/foodcourt.component.html
+++ b/angular/calculator/src/app/foodcourt/foodcourt.component.html
@@ -1,6 +1,6 @@
 <div>
 
-<button id=testAjax (click)=getFoodCourt()>Classic Ajax</button>,
+<button id=testAjax (click)=getFoodCourt()>Classic Ajax</button>&nbsp;&nbsp;
 <button id=testAjax (click)=getFoodCourtHttp()>Angular Http</button><br><br>
 <textarea id=court readonly=true rows=20 cols=100></textarea>
 
