--- a/angular/calculator/src/app/calculator/calculator.component.html
+++ b/angular/calculator/src/app/calculator/calculator.component.html
@@ -11,7 +11,7 @@ Operation:
 	<option value="**">Power of</option>
 	<option value="sqrt">Square root</option>
 </select><br>
-Number 2: <input #input2 id=input2 type=text placeholder="Number 2" [value]=num2  (change)="onchange2(input2.value)" /><br>
+Number 2: <input #input2 id=input2 type=text placeholder="Number 2" [(ngModel)]=num2Str /><br>
 Result: <input type=text id=result placeholder="Result" readonly=true value={{result}}/><br><br>
 
 <button id=addBtn (click)=calculate(operation.value)>Calculate</button><br>
