--- a/angular/calculator/src/app/calculator/calculator.component.html
+++ b/angular/calculator/src/app/calculator/calculator.component.html
@@ -3,13 +3,7 @@
 Number 1: <input #input1 id=input1 type=text placeholder="Number 1" [value]="num1" (change)="onchange1(input1.value)" /><br>
 Operation: 
 <select #operation (change)=opChange(operation.value) >
-	<option value="+">Add</option>
-	<option value="-">Subtract</option>
-	<option value="*">Multiply</option>
-	<option value="/">Divide</option>
-	<option value="**2">Power of 2</option>
-	<option value="**">Power of</option>
-	<option value="sqrt">Square root</option>
+	<option [value]=operation[0] *ngFor="let operation of operations">{{operation[1]}}</option>
 </select><br>
 Number 2: <input #input2 id=input2 type=text placeholder="Number 2" [(ngModel)]=num2Str /><br>
 Result: <input type=text id=result placeholder="Result" readonly=true value={{result}}/><br><br>
