2 digit decimal precision

--- a/angular/calculator/src/app/foodcourt/foodcourt.component.html
+++ b/angular/calculator/src/app/foodcourt/foodcourt.component.html
@@ -1,7 +1,8 @@
 <div>
 
 <button id=testAjax (click)=getFoodCourt()>Classic Ajax</button>&nbsp;&nbsp;
-<button id=testAjax (click)=getFoodCourtHttp()>Angular Http</button><br><br>
+<button id=testAjax (click)=getFoodCourtHttp()>Angular Http</button>&nbsp;&nbsp;
+<button id=testAjax (click)=getFoodCourtHttpInject()>Angular Http Injection</button><br><br>
 <textarea id=court readonly=true rows=20 cols=100></textarea>
 
 </div>
